# object_track_and_follow

./: README.md
cfg/: pid.cfg~  pidParam.cfg~
docs/: pidParamConfig-usage.dox  pidParamConfig.dox
launch/: ardrone_config.launch  ardrone_config.launch~  follow_gui.launch~  gui.launch~  track.launch~
mavlink_apm_interpreter/: CMakeLists.txt  package.xml
mavlink_apm_interpreter/src/: RC_Channel.cpp  RC_Channel.h  interpreter_node.cpp
object_follow/: CMakeLists.txt  package.xml
object_follow/cfg/: pidParam.cfg
object_follow/cfg/cpp/object_follow/: pidParamConfig.h
object_follow/docs/: pidParamConfig.wikidoc
object_follow/launch/: gui.launch  tld_tracker.launch
object_follow/src/: FollowControll.h
object_follow/src/gui/: mainwindow.cpp  mainwindow.ui
object_follow/src/gui/drone_control/: drone_control.cpp  drone_control.pro  main_drone_control_node.cpp
object_follow/src/gui/object_track/: baseframegraphicsview.cpp  baseframegraphicsview.h  object_follow_gui.pro
object_follow/src/object_follow/cfg/: pidParamConfig.py
src/: Controller.cpp  Controller.h  FollowControll.cpp  main_object_follow_node.cpp
src/gui/: dronecontrolgraphicsview.cpp  dronecontrolgraphicsview.h  main_gui_node.cpp  mainwindow.h
src/gui/drone_control/: drone_control.h  drone_control.ui
src/gui/object_track/: main_gui.cpp  object_follow_gui.cpp  object_follow_gui.h  object_follow_gui.ui
srv/: controller_cmd.srv~
